--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokedexJS</title>
+    <link rel="stylesheet" href="css/mobile.css">
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Tentativa</h1>
-    <h3 id="name"></h3>
-
-
-
+    <h1 id="title">Pokédex</h1>
+    <input type="text" id="name" name="pokemon" placeholder="Digite o nome de algum Pokémon">
+    <div class="button"></div>
+    <div class="main"></div>
 </body>
 </html>
