--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokedexJS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Matemasie&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <!--Estilos css-->
     <link rel="stylesheet" href="css/mobile.css">
     <script src="script.js"></script>
 </head>
 <body>
-    <h1 id="title">Pokédex</h1>
-    <input type="text" id="name" name="pokemon" placeholder="Digite o nome de algum Pokémon">
-    <div class="button"></div>
-    <div class="main"></div>
+    <header>
+        <h1 id="title">Pokédex</h1>
+        <img class="icon-title" src="/img/pokebol-icon-menor.png" alt="Icone de Pokebola">
+    </header>
+    <main>
+        <input type="text" id="name" name="pokemon" placeholder="Digite o nome de algum Pokémon">
+        <div class="button"><span class="material-symbols-outlined icon">search</span></div>
+        <div class="main"></div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
