terminando os estilos mobile

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
         <img class="icon-title" src="/img/pokebol-icon-menor.png" alt="Icone de Pokebola">
     </header>
     <main>
-        <input type="text" id="name" name="pokemon" placeholder="Digite o nome de algum Pokémon">
-        <div class="button"><span class="material-symbols-outlined icon">search</span></div>
-        <div class="main"></div>
+        <div class="search">
+            <input type="text" id="name" name="pokemon" placeholder="Digite o nome de algum Pokémon">
+            <div class="button"><span class="material-symbols-outlined icon">search</span></div>
+        </div>
+        <div class="main">
+            
+        </div>
     </main>
     <footer>
 
