começando uma base pra inserir informações com javascript

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             <div class="button"><span class="material-symbols-outlined icon">search</span></div>
         </div>
         <div class="main">
-            
+            <div class="tam">
+                <h2 style="color: white; text-align: center; margin: 10px 0px 10px 0px;" id="titulo">Ratata</h2>
+            </div>
+            <div class="default"></div>
+            <p class="text">O Pokémon `${data.name}` é do tipo `${?}`</p>
         </div>
     </main>
     <footer>
