--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <!--Estilos css-->
     <link rel="stylesheet" href="css/mobile.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -27,11 +26,16 @@
                 <h2 style="color: white; text-align: center; margin: 10px 0px 10px 0px;" id="titulo">Ratata</h2>
             </div>
             <div class="default"></div>
-            <p class="text">O Pokémon `${data.name}` é do tipo `${?}`</p>
+            <p class="text">O Pokémon NOME, tem ALTURA de altura e pesa PESO em sua primeira evolução</p>
+            <p class="text">O tipo de NOME é: </p>
+            <h2 class="text">Linha evolutiva: </h2>
         </div>
     </main>
     <footer>
-
+        <p>Página criada com a <a href="https://pokeapi.co" target="_blank">PokeApi</a> e produzida por <a href="https://github.com/gabrielsndev" target="_blank">Gabriel Souza</a> &copy;</p>
     </footer>
+
+    
+    <script src="script.js"></script>
 </body>
 </html>
