tratando erros e adicionando a versão shyni do pokemon junto de dados

--- a/index.html
+++ b/index.html
@@ -18,24 +18,22 @@
     </header>
     <main>
         <div class="search">
-            <input type="text" id="name" name="pokemon" placeholder="Digite o nome de algum Pokémon">
+            <input type="text" id="input" name="pokemon" placeholder="Digite o nome de algum Pokémon">
             <div class="button"><span class="material-symbols-outlined icon">search</span></div>
         </div>
         <div class="main">
             <div class="tam">
-                <h2 style="color: white; text-align: center; margin: 10px 0px 10px 0px;" id="titulo">Ratata</h2>
+                <h2 id="nome"></h2>
             </div>
             <div class="default"></div>
-            <p class="text">O Pokémon NOME, tem ALTURA de altura e pesa PESO em sua primeira evolução</p>
-            <p class="text">O tipo de NOME é: </p>
-            <h2 class="text">Linha evolutiva: </h2>
+
         </div>
     </main>
     <footer>
         <p>Página criada com a <a href="https://pokeapi.co" target="_blank">PokeApi</a> e produzida por <a href="https://github.com/gabrielsndev" target="_blank">Gabriel Souza</a> &copy;</p>
     </footer>
 
-    
+
     <script src="script.js"></script>
 </body>
 </html>
