--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Matemasie&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <!--Estilos css-->
-    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -26,7 +26,6 @@
                 <h2 id="nome"></h2>
             </div>
             <div class="default"></div>
-
         </div>
     </main>
     <footer>
