--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Matemasie&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="shortcut icon" href="img/pokebol-icon-menor.png" type="image/x-icon">
     <!--Estilos css-->
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -26,10 +27,11 @@
                 <h2 id="nome"></h2>
             </div>
             <div class="default"></div>
+            <div class="tam"></div>
         </div>
     </main>
     
-    <footer>
+    <footer id="footer">
         <p>Página criada com a <a href="https://pokeapi.co" target="_blank">PokeApi</a> e produzida por <a href="https://github.com/gabrielsndev" target="_blank">Gabriel Souza</a> &copy;</p>
     </footer>
 
