--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Matemasie&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="shortcut icon" href="img/pokebol-icon-menor.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/pokebola.webp" type="image/x-icon">
     <!--Estilos css-->
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
         <h1 id="title">Pokédex</h1>
-        <img class="icon-title" src="/img/pokebol-icon-menor.png" alt="Icone de Pokebola">
+        <img class="icon-title" src="img/pokebol-icon-menor.png" alt="Icone de Pokebola">
     </header>
     <main>
         <div class="search">
